fix: spacing adjusted of the tables

--- a/themes/template1/asset/css/style.css
+++ b/themes/template1/asset/css/style.css
@@ -11,7 +11,7 @@
     --cor-body: #EBECDF;
 
     --text-primary: #7c7c7c;
-    --text-secondary: rgb(84, 84, 84);//#828282;
+    --text-secondary: rgb(84, 84, 84);
 
     --box-top: 15%;
     --box-shadow: 2px 2px 4px rgb(75, 75, 75);
@@ -289,7 +289,7 @@ section.loading, .text-loading {
 }
 
 .my-table th, .my-table td {
-    padding-left: 5px;
+    padding: 2px;
 }
 
 .my-table td {
